<resources>
    <string name="app_name">Mach</string>
    <string name="text1">Mach</string>
    <string name="todo">TODO</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?</string>
    <string name="registrate">Registrate.</string>
    <string name="inicia_secion">Inicia Sesion.</string>
    <string name="ya_tienes_una_cuanta">Ya tienes una cuanta?</string>
    <string name="registrar">Registrar</string>
    <string name="confirmar_password">Confirmar Password</string>
    <string name="e_mail">E-mail</string>
    <string name="nombre">Nombre</string>
    <string name="registro">Registro</string>
    <string name="horas">Horas:</string>
    <string name="Buscar">Buscar</string>
    <string name="recuperar">Obtén ayuda.</string>
    <string name="texto_re">¿Olvidaste tus datos de inicio de seción?</string>
    <string name="ayuda">Ayuda para iniciar sesión</string>
    <string name="cuenta_recuperar">Resuperar tu cuenta</string>
    <string name="texto_ayuda">Ingresa la dirrecion de usuario de Mach vinculada a tu cuenta.</string>
    <string name="siguiente">Siguiente</string>
    <string name="are_you_sure">¿Estás seguro?</string>
    <string name="logout">Cerrar sesión</string>
    <string name="cancel">Cancelar</string>
    <string name="type_a_message">Escriba un mensaje...</string>
    <string name="loading">Loading...</string>
    <string name="please_wait">"Por favor espera..."</string>
    <string name="user_successfully_added">¡Usuario agregado con éxito!</string>
    <string name="user_unable_to_add">¡No se puede agregar usuario!</string>
    <string name="titulo">Titulo de nota</string>
    <string name="Mensaje">Mensaje</string>
    <string name="seleccione_la_fecha">Seleccione la fecha</string>
    <string name="fecha">Fecha</string>
    <string name="seleccione_la_hora">Seleccione la hora</string>
    <string name="hora">Hora</string>
    <string name="Guardar">guardar</string>
    <string name="decripcion">Decripcion:</string>
    <string name="descripcion">Descripcion...</string>
    <string name="enviar">Enviar</string>
    <string name="numero">1</string>
    <string name="espacio">/</string>
    <string name="s_eliminar">Sí, Eliminar</string>
    <string name="eliminar_nota">Eliminar Nota?</string>
</resources>
