<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_alarma"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="false"
        android:fitsSystemWindows="true"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/tarea"
                android:contentDescription="@string/todo" />

            <EditText
                android:id="@+id/editText21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:drawableStart="@android:drawable/sym_action_email"
                android:ems="10"
                android:hint="@string/titulo"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editText22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText21"
                android:drawableStart="@android:drawable/ic_menu_view"
                android:ems="10"
                android:hint="@string/Mensaje"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txtdescrip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/editText22"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/decripcion"
                android:textAllCaps="true"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/eddescrip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtdescrip"
                android:inputType="textMultiLine"
                android:background="@null"
                android:gravity="top|start"
                android:hint="@string/descripcion"
                android:lines="5"
                android:textSize="14sp"
                android:padding="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <EditText
                android:id="@+id/editText23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/eddescrip"
                android:drawableStart="@android:drawable/ic_menu_my_calendar"
                android:ems="10"
                android:hint="@string/fecha"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editText24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText23"
                android:drawableStart="@android:drawable/ic_menu_recent_history"
                android:ems="10"
                android:hint="@string/hora"
                android:inputType="textPersonName|time" />

            <Button
                android:id="@+id/button30"
                android:layout_width="300sp"
                android:layout_height="50dp"
                android:layout_below="@+id/editText24"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/enviar"
                style="?android:textAppearanceSmall"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <TimePicker
                android:layout_width="match_parent"
                android:layout_height="106dp"
                android:id="@+id/timePicker"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:visibility="gone" />

            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="82dp"
                android:id="@+id/datePicker"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:visibility="gone" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>

