<?xml version="1.0" encoding="utf-8" ?>
<com.daimajia.swipe.SwipeLayout xmlns:swipe="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    android:id="@+id/swipe"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    swipe:leftEdgeSwipeOffset="0dp"
    swipe:rightEdgeSwipeOffset="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#c3ff5534"
        android:gravity="center"
        android:tag="Bottom3"
        android:weightSum="10">

        <ImageView
            android:id="@+id/trash"
            android:layout_width="27dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:src="@drawable/trash" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/eliminar_nota"
            android:textColor="#fff"
            android:textSize="17sp" />

        <Button
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="4"
            android:background="@drawable/white"
            android:text="@string/s_eliminar"
            android:textColor="#FF5534" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/diagonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/position"
            android:layout_toEndOf="@+id/titulo"
            android:layout_marginStart="10dp"
            android:text="@string/espacio"/>

        <TextView
            android:id="@+id/mensaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/titulo"
            android:layout_toEndOf="@+id/diagonal"
            android:layout_marginStart="10dp"
            android:text="@string/Mensaje"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/text_data"
            android:layout_below="@+id/mensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="Hover"
            app:text="Do not, for one repulse, forgo the purpose that you resolved to effort. " />

    </RelativeLayout>

</com.daimajia.swipe.SwipeLayout>