<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Recuperar">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_ayuda" />

    <TextView
        android:id="@+id/txt_tituloRecuperar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/cuenta_recuperar"
        android:textColor="@color/colorBlanco"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txt_tituloRecuperar"
        android:padding="40dp"
        android:text="@string/texto_ayuda"
        android:textAlignment="center"
        android:textColor="@color/colorBlanco"
        android:textSize="14sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColorHint="@color/colorBlanco"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorBlanco"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/enviar"
        style="?android:textAppearanceSmall"
        android:layout_width="300sp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="175dp"
        android:backgroundTint="@android:color/white"
        android:text="@string/siguiente"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />


</RelativeLayout>